--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.59.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.5"
   },
   "devDependencies": {
